# thesis-redo-withMLOP-pneumonia-segmentation

./: .dockerignore  .gitignore  .hfignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  main.py  nginx.conf  params.yaml  prometheus.yml  pyproject.toml  requirements-app.in  requirements-app.txt  requirements-dev.in  requirements-dev.txt  requirements-wsl.in  requirements.in  requirements.txt  template.py  up.bat  upload_to_hf.py
.dvc/: config
.github/workflows/: workflow.yaml
app/: helpers.py  main.py  stress_tester.py
app/templates/: index.html
config/: config.yaml
grafana/dashboards/: dashboard.yaml
k8s/: apply-all.sh  hpa.yaml  ingress.yaml  prometheus-config.yaml  pvc.yaml  rbac.yaml  setup.sh  storage.yaml  test-whoami.yaml
k8s/services/: ai_manager.yaml  app.yaml  app_edge.yaml  claude_architecture.yaml  claude_validation.yaml  data_drift.yaml  dqn.yaml  grafana.yaml  ingestion.yaml  lstm.yaml  orchestrator.yaml  prefect.yaml  prometheus.yaml  transformation.yaml
notebooks/: eda.ipynb  firstAgent.ipynb  mapeK_dqn.ipynb  mapeK_lstm.ipynb  research.ipynb  secAgent.ipynb  stage1_data_ingestion.ipynb  stage2_data_transformation.ipynb  stage3_data_drift.ipynb  stage4_prepare_base_model.ipynb  stage5_training.ipynb  stage6_export_onnx.ipynb  stage7_tensorrt.ipynb  stage8_evaluation.ipynb
scripts/: dashboard.html  dashboard_server.py  download_models.py  grafana_panels.py  setup_grafana.py  upload_to_hf.py
services/AI_Manager/: main.py  (+1 more)
tests/: locustfile.py  locustfile_wsl.py  sanity_check.py  simulate_drift.py  test_basic.py
(+70 files in other folders)
